# pi-para

./: .gitignore  .npmignore  .npmrc  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  DAEMON-PLAN.md  PROVIDER_MODEL_SELECTION_PLAN.md  README.md  ROADMAP-v0.4.md  SETUP.md  SETUP_SETTINGS_FLOW_PLAN.md  STRUCTURE.md  package-lock.json  package.json  pi-para-daemon.service  setup.sh  tsconfig.json  vitest.config.ts
scripts/: build-assets.mjs  install.ps1  install.sh  smoke-install.mjs
scripts/gepa/: dataset.py  lm_providers.py  metric.py  optimize.py  program.py  pyproject.toml  run-all.sh  wiki_reader.py
src/: atomic-write.ts  capture.ts  cli-legacy.ts  cli.ts  commands.ts  config.ts  context.ts  credentials.ts  daemon.ts  doctor.ts  frontmatter.ts  index.ts  ingest.ts  link-discovery.ts  link-utils.ts  lint.ts  maintainer.ts  model-resolver.ts  paths.ts  processor.ts  qmd-providers.ts  query.ts  raw.ts  redact.ts  repair.ts  scope.ts  session-tools.ts  settings.ts  setup.ts  state.ts  status.ts  store.ts  summarize.ts  tag-registry.ts  tools.ts  wiki-tool-guidance.ts  wiki.ts
test/: capture-quiet.test.ts  capture.test.ts  cli-legacy.test.ts  cli.test.ts  commands.test.ts  config.test.ts  context.test.ts  credentials.test.ts  doctor.test.ts  frontmatter.test.ts  index.test.ts  ingest.test.ts  lint.test.ts  model-resolver.test.ts  model-runtime-contract.test.ts  paths.test.ts  qmd-providers.test.ts  query.test.ts  raw.test.ts  repair.test.ts  scheduler-controls.test.ts  scheduler.test.ts  scope.test.ts  session-capture.test.ts  settings.test.ts  setup.test.ts  (+7 more)
(+38 files in other folders)
